yaml-applications/dev-admin-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: plannify-dev-admin-api
  name: plannify-dev-admin-api
  namespace: plannify-dev
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: plannify-dev-admin-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: plannify-dev-admin-api
    spec:
      containers:
        - image: ghcr.io/plannify-truck-driver/admin-api:0.0.1-dev.100
          name: plannify-dev-admin-api
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "4m"
              memory: "8Mi"
            limits:
              cpu: "16m"
              memory: "24Mi"
          ports:
            - containerPort: 3000
              protocol: TCP
          startupProbe:
            httpGet:
              path: /admin/health
              port: 3000
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /admin/health
              port: 3000
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /admin/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: ghcr-secret
